Shard variant of 'moveChunk' should not check for exact collection version

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.9
    • Affects Version/s: 3.3.9
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 16 (06/24/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The changes for SERVER-24467 tightened the checks around collection version mismatch in the moveChunk command. However, this breaks the initial partitioning of a hashed sharded collection by a 3.2 mongos, because 3.2 it does not refresh the collection metadata between iterations.

      In order to preserve backwards compatibility with 3.2 we should remove the exact collection version check.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: