SERVER-24558 Fix hash_shard_num_chunks.js